# eads-m4-gtest-project

./: CMakeLists.txt  Dockerfile  README.md  compile_and_test
include/: CoinManager.h  Display.h  ProductManager.h  VendingMachine.h
src/: VendingMachine.cpp
test/: VendingMachine_test.cpp
